--- a/projects/picker/.npmrc
+++ b/projects/picker/.npmrc
@@ -1,1 +1,2 @@
-registry=https://npm.pkg.github.com/kwu-work
+registry=https://npm.pkg.github.com/cetaris
+//npm.pkg.github.com/:_authToken=b1137533b5bd0d6f72f523be3b7d59f875502961
