--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,6 @@
   "singleQuote": true,
   "printWidth": 140,
   "semi": true,
-  "trailingComma": "es5"
+  "trailingComma": "es5",
+  "arrowParens": "always"
 }
