--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,7 @@
   "printWidth": 140,
   "semi": true,
   "trailingComma": "es5",
-  "arrowParens": "always"
+  "arrowParens": "always",
+  "endOfLine": "lf",
+  "htmlWhitespaceSensitivity": "css"
 }
