--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "npm run build_css && ng serve --o",
     "build": "ng build picker",
     "test": "ng test picker",
     "lint": "ng lint",
@@ -28,28 +28,28 @@
     "url": "https://github.com/DanielYKPan/date-time-picker.git"
   },
   "dependencies": {
-    "@angular/animations": "~9.1.3",
-    "@angular/common": "~9.1.3",
-    "@angular/compiler": "~9.1.3",
-    "@angular/core": "~9.1.3",
-    "@angular/forms": "~9.1.3",
-    "@angular/platform-browser": "~9.1.3",
-    "@angular/platform-browser-dynamic": "~9.1.3",
-    "@angular/router": "~9.1.3",
+    "@angular/animations": "~9.1.9",
+    "@angular/common": "~9.1.9",
+    "@angular/compiler": "~9.1.9",
+    "@angular/core": "~9.1.9",
+    "@angular/forms": "~9.1.9",
+    "@angular/platform-browser": "~9.1.9",
+    "@angular/platform-browser-dynamic": "~9.1.9",
+    "@angular/router": "~9.1.9",
     "core-js": "^2.6.5",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.25",
-    "rxjs": "~6.5.3",
+    "rxjs": "~6.5.5",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.3",
-    "@angular-devkit/build-ng-packagr": "~0.901.3",
-    "@angular/cdk": "^9.2.1",
-    "@angular/cli": "~9.1.3",
-    "@angular/compiler-cli": "~9.1.3",
-    "@angular/language-service": "~9.1.3",
+    "@angular-devkit/build-angular": "~0.901.7",
+    "@angular-devkit/build-ng-packagr": "~0.901.7",
+    "@angular/cdk": "^9.2.4",
+    "@angular/cli": "~9.1.7",
+    "@angular/compiler-cli": "~9.1.9",
+    "@angular/language-service": "~9.1.9",
     "@types/jasmine": "~3.3.12",
     "@types/jasminewd2": "~2.0.6",
     "@types/node": "^12.11.1",
